<resources>
    <string name="app_name">TinkoffFintech</string>
    <string name="start_icon">start icon</string>
    <string name="login">ЛОГИН</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="log">ВОЙТИ</string>
    <string name="field_empty">Поля ввода пустые</string>
    <string name="error">ошибка</string>
    <string name="no_internet">Нет интернета</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="relevant">Актуальное</string>
    <string name="past">Прошедшие</string>
    <string name="all">Все</string>
    <string name="my_course">Мои курсы</string>
    <string name="events">Мероприятия</string>
    <string name="profile">Профиль</string>
    <string name="test">Тестов</string>
    <string name="course">Курса</string>
    <string name="score">Балла</string>
    <string name="sing_out">singout</string>
    <string name="contact_information">Контактная информация</string>
    <string name="header_mobile_phone">Мобильный телефон</string>
    <string name="mobile_phone">+7 (965) 123 44 55</string>
    <string name="header_mail">Электронная почта</string>
    <string name="mail">yulia.smirnova@gmail.com</string>
    <string name="header_city">Город проживания</string>
    <string name="ellipsisStart">❝</string>
    <string name="ellipsisEnd">❞</string>
    <string name="label_past">Прошедшее</string>
    <string name="fitChatPoints">балла</string>
    <string name="courses_completed">Пройденные курсы</string>
    <string name="lesson">занятий</string>
    <string name="done_homework">Выполнено домашек</string>
    <string name="done_test">Пройдено тестов</string>
    <string name="overall_rating">Общий рейтинг</string>
    <string name="passed">Прошло</string>
    <string name="remained">Осталось</string>
    <string name="rating">Рейтинг</string>
    <string name="specific_rating">ДЕТАЛИ</string>
    <string name="performance">Успеваемость</string>
    <string name="specific_performance">ДЕТАЛИ</string>
    <string name="key">bf5e348de3daca8f75ad68aef72b58b4b8a44e45fa1adb4f9f69d17b1f58a3ef</string>
    <string name="not_passed_courses">Не сдан</string>
    <string name="passed_courses">Сдан</string>
    <string name="update">update</string>
    <string name="academic_performance">Успеваемость</string>
    <string name="empty" />
    <string name="mark">Оценки</string>
    <string name="search">search</string>
</resources>
