<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/progress_bar_auth"
        android:theme="@style/CircularProgress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/app_bar_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/check" />

                    <TextView
                        android:id="@+id/textViewNameProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toTopOf="@+id/textViewMailProfile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Юлия Смирнова" />

                    <TextView
                        android:id="@+id/textViewMailProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="48dp"
                        android:fontFamily="sans-serif"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="yulia.smirnova@gmail.com" />

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarProfile"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/body_fragment_profile" />

        <iammert.com.view.scalinglib.ScalingLayout
            android:id="@+id/scalingLayout"
            android:layout_width="344dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:stateListAnimator="@animator/sl_state_animator"
            app:layout_behavior="iammert.com.view.scalinglib.ScalingLayoutBehavior"
            app:radiusFactor="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="182" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/score"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="18" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/test"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewCounterCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        tools:text="1"
                        android:textColor="#333333"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/course"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

        </iammert.com.view.scalinglib.ScalingLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>

